Tests/New/Pos/Map/mapofmap.p
main machine Entry {
    var l:map[int,map[int,int]];

    start state init {
    }
}
